Fixed problem showing gaps between repitition of the menu background-image

--- a/thepoint/static/style/default.css
+++ b/thepoint/static/style/default.css
@@ -299,7 +299,7 @@ div#navbar ul li a:hover:before {
 div#navbar-member {
     color: white;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1 1'%3E%3Crect width='1' height='1' fill='black' opacity='0.8'/%3E%3C/svg%3E");
-    background-size: 100px 100px;
+    background-size: 2000px 2000px;
     display: none;
     position: absolute;
     top: 30px;
@@ -345,7 +345,7 @@ div#navbar-member ul a {
 
 div#navbar-member ul li a:hover {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1 1'%3E%3Crect width='1' height='1' fill='rgb(170,50,0)' opacity='0.8'/%3E%3C/svg%3E");
-    background-size: 100px 100px;
+    background-size: 2000px 2000px;
 }
 
 input#navbar-trigger, input#navbar-member-trigger {
